--- a/style.css
+++ b/style.css
@@ -32,7 +32,6 @@ hr {
 .hangman-draw {
   width: 60px;
   height: 280px;
-  border-bottom: 4px solid #222;
   background-color: #b43e1417;
   position: relative;
   margin: auto;
@@ -45,15 +44,19 @@ hr {
   position: relative;
   margin: auto;
   left: -60px;
+  display: none;
 }
-.hangman-draw .the-stand::before {
-  content: "";
+.hangman-draw .the-stand {
   position: absolute;
   width: 4px;
   background-color: #222;
   height: 100%;
   left: 50%;
   margin-left: -2px;
+  display: none;
+}
+.hangman-draw .the-hang {
+  display: none;
 }
 .hangman-draw .the-hang::before {
   content: "";
@@ -81,6 +84,7 @@ hr {
   top: 45px;
   left: 95px;
   border-radius: 50%;
+  display: none;
 }
 .hangman-draw .the-man .head {
   position: absolute;
@@ -90,6 +94,7 @@ hr {
   border: 4px solid #222;
   left: 105px;
   top: 55px;
+  display: none;
 }
 .hangman-draw .the-man .body {
   position: absolute;
@@ -99,6 +104,7 @@ hr {
   width: 4px;
   height: 110px;
   top: 104px;
+  display: none;
 }
 .hangman-draw .the-man .hands::before,
 .hangman-draw .the-man .hands::after {
@@ -110,6 +116,9 @@ hr {
   width: 50px;
   border-radius: 4px;
 }
+.hangman-draw .the-man .hands {
+  display: none;
+}
 .hangman-draw .the-man .hands::before {
   left: 85px;
   transform: rotate(30deg);
@@ -118,7 +127,9 @@ hr {
   left: 130px;
   transform: rotate(-30deg);
 }
-
+.hangman-draw .the-man .legs {
+  display: none;
+}
 .hangman-draw .the-man .legs::before,
 .hangman-draw .the-man .legs::after {
   position: absolute;
@@ -142,6 +153,9 @@ hr {
   padding: 15px;
   text-align: center;
 }
+.letters.finished {
+  pointer-events: none;
+}
 .letters .letter-box {
   width: 55px;
   height: 55px;
@@ -155,6 +169,11 @@ hr {
   font-weight: bold;
   cursor: pointer;
   margin-bottom: 10px;
+}
+.letters .letter-box.clicked {
+  background-color: #222;
+  opacity: 0.2;
+  pointer-events: none;
 }
 .letters-guess {
   margin: 10px auto;
@@ -191,4 +210,40 @@ hr {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+}
+.hangman-draw.wrong-1 .the-draw {
+  display: block;
+}
+.hangman-draw.wrong-2 .the-stand {
+  display: block;
+}
+.hangman-draw.wrong-3 .the-hang {
+  display: block;
+}
+.hangman-draw.wrong-4 .the-rope {
+  display: block;
+}
+.hangman-draw.wrong-5 .head {
+  display: block;
+}
+.hangman-draw.wrong-6 .body {
+  display: block;
+}
+.hangman-draw.wrong-7 .hands {
+  display: block;
+}
+.hangman-draw.wrong-8 .legs {
+  display: block;
+}
+.popup {
+  position: fixed;
+  background-color: #bb1d1d;
+  padding: 100px 20px;
+  width: 80%;
+  top: 20%;
+  left: 10%;
+  text-align: center;
+  font-size: 40px;
+  border: 1px solid #ccc;
+  color: #fff;
 }
